<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="send_mail">Send mail</string>
    <string name="start_screen">Авторизация</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="action_btn_text">Авторизоваться</string>
    <string name="registration_text">Зарегистрироваться</string>
    <string name="game_x_or_null">игра крестики нолики</string>
    <string name="registration_title">регистрация</string>
    <string name="remember_password">Запомнить пароль?</string>
    <string name="question_1">Название ближайшей звезды</string>
    <string name="answer_1">Альфа-центавра</string>
    <string name="answer_2">Солнце</string>
    <string name="question_2">название естестественного спутника земли</string>
    <string name="answer_3">Луна</string>
    <string name="answer_4">Фобос</string>
    <string name="answer">Ответить</string>
    <string name="secondScreen">secondScreen</string>
    <string name="player_x">X</string>
    <string name="computer_null">0</string>





</resources>