<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_screen"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size" />

    <EditText
        android:id="@+id/loginEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_medium"
        android:layout_marginTop="@dimen/margin_top_for_login"
        android:hint="@string/login_hint"
        android:maxLength="10" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_medium"
        android:layout_marginTop="@dimen/margin_top_for_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/actionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_for_password"
        android:text="@string/action_btn_text"
        android:background="@color/yellow"
        style="@style/Button"/>

    <TextView
        android:id="@+id/registrationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/registration_text"
        android:textColor="@color/blue"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_margin_top"
        style="@style/Button"/>

    <TextView
        android:id="@+id/game_x_or_null_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/game_x_or_null"
        android:textColor="@color/blue"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_margin_top" />

    <TextView
        android:id="@+id/secondScreenTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/secondScreen"
        android:textColor="@color/blue"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_margin_top"
        style="@style/Button"/>

    <CheckBox
        android:id="@+id/rememberPasswordCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_gravity="end"
        />

</LinearLayout>